--- a/index.org
+++ b/index.org
@@ -50,9 +50,9 @@ just check the release notes and you will be up-to-date.
 This package works on Emacs 23 and 22, and (with minor restrictions)
 on Emacs 21 and XEmacs 21 (where you must also use
 /xemacs/noutline.el/ shipped with Org-mode).  The Emacs 22.2 release
-ships with Org-mode version 4.67d.  The latest CVS emacs trunk usually
-contains a fairly recent version, but may lag a bit behind the website
-release.
+ships with Org-mode version 4.67d.  The Emacs 23 release is expected
+to ship with 6.09a. The latest CVS emacs trunk usually contains a
+fairly recent version, but may lag a bit behind the website release.
 
 * Downloads
 
