--- a/Changes.org
+++ b/Changes.org
@@ -11,12 +11,27 @@
 #+LINK_HOME: http://orgmode.org
 
 
-* Version 6.10
+* Version 6.10 (in preparation)
 :PROPERTIES:
 :VISIBILITY: content
 :END:
 
 ** Details
+
+*** Setting tags has now its own binding, =C-c C-q=
+
+    You can still use =C-c C-c= on a headline, but the new
+    binding should be considered as the main binding for this
+    command.  Reasons:
+
+    - Using =C-c C-c= for tags is really out of line with other
+      use of =C-c C-c=.
+
+    - I hate it in Remember buffers when I try to set tags and I
+      cannot, because =C-c C-c= exits the buffer :-(
+
+    - =C-c C-q= wll also work when the cursor is somewhere down
+      in the entry, it does not have to be on the headline.
 
 *** New option `org-log-state-notes-insert-after-drawers'
     Set this to t if you want state change notes to be inserted
