--- a/index.org
+++ b/index.org
@@ -39,9 +39,9 @@ structured ASCII file, HTML, and LaTeX.
 
 Check out the [[file:GoogleTech.org][Google Tech Talk]] about Org-mode.
 
-* Current Version (6.10c) and Compatibility
+* Current Version (6.11) and Compatibility
 
-The current version is 6.10c.  To see what has changed in recent
+The current version is 6.11.  To see what has changed in recent
 releases, check this [[file:Changes.html][list of user-visible changes]].  These descriptions
 are extensive, to avoid that people will be printing the manual after
 each incremental release.  If you have an older version of the manual,
@@ -58,7 +58,7 @@ fairly recent version, but may lag a bit behind the website release.
 
 ** The standard distribution
 
-Download as [[file:org-6.10c.zip][zip file]] or [[file:org-6.10c.tar.gz][gzipped tar archive]].  These archives contain
+Download as [[file:org-6.11.zip][zip file]] or [[file:org-6.11.tar.gz][gzipped tar archive]].  These archives contain
 both the Lisp file org.el and the documentation in PDF and (TeX)Info
 formats.  A shell script to simplify upgrading to the newest release
 has been posted [[http://www.philfam.co.uk/pete/GTD/org-mode/update-org.sh][here]].
