Allow to only display logging information in the agenda.
Jurgen Defume asked for a way to display only logging information in
the agenda.  This patch implements such a possibility.  It works by
calling `org-agenda-log-mode' (bound to `l' in the agenda) with a
double prefix arg.  This sets the variable `org-agenda-show-log' to a
special value `only' which is then interpreted by the agenda-creating
functions.

--- a/Changes.org
+++ b/Changes.org
@@ -70,8 +70,11 @@
     much for normal applications, you can also temporarily
     request the inclusion of state changes by pressing =C-u l= in
     the agenda.
-    
+
     This was a request by Hsiu-Khuern Tang.
+
+    You can also press `C-u C-u l' to get *only* log items in the
+    agenda, withour any timestamps/deadlines etc.
 
 *** Footnote in HTML export are now collected at the end of the document
     Previously, footnotes would be left in the document where
